docs/api/qiskit/0.33/qiskit.providers.aer.library.SaveAmplitudes.mdx
---
title: SaveAmplitudes (v0.33)
description: API reference for qiskit.providers.aer.library.SaveAmplitudes in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.library.SaveAmplitudes
---

# SaveAmplitudes

<Class id="qiskit.providers.aer.library.SaveAmplitudes" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.9/qiskit/providers/aer/library/save_instructions/save_amplitudes.py" signature="SaveAmplitudes(num_qubits, params, label='amplitudes', pershot=False, conditional=False)" modifiers="class">
  Bases: `qiskit.providers.aer.library.save_instructions.save_data.SaveSingleData`

  Save complex statevector amplitudes.

  Instruction to save complex statevector amplitudes.

  **Parameters**

  *   **num\_qubits** (*int*) – the number of qubits for the snapshot type.
  *   **params** (*list*) – list of entries to vale.
  *   **label** (*str*) – the key for retrieving saved data from results.
  *   **pershot** (*bool*) – if True save a list of amplitudes vectors for each shot of the simulation rather than the a single amplitude vector \[Default: False].
  *   **conditional** (*bool*) – if True save the amplitudes vector conditional on the current classical register values \[Default: False].

  **Raises**

  **ExtensionError** – if params is invalid for the specified number of qubits.

  ## Methods

  <span id="qiskit-providers-aer-library-saveamplitudes-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.providers.aer.library.SaveAmplitudes.add_decomposition" signature="SaveAmplitudes.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="qiskit-providers-aer-library-saveamplitudes-assemble" />

  ### assemble

  <Function id="qiskit.providers.aer.library.SaveAmplitudes.assemble" signature="SaveAmplitudes.assemble()">
    Return the QasmQobjInstruction for the intructions.
  </Function>

  <span id="qiskit-providers-aer-library-saveamplitudes-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.library.SaveAmplitudes.broadcast_arguments" signature="SaveAmplitudes.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="qiskit-providers-aer-library-saveamplitudes-c-if" />

  ### c\_if

  <Function id="qiskit.providers.aer.library.SaveAmplitudes.c_if" signature="SaveAmplitudes.c_if(classical, val)">
    Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.

    <Admonition title="Note" type="note">
      This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
    </Admonition>
  </Function>

  <span id="qiskit-providers-aer-library-saveamplitudes-copy" />

  ### copy

  <Function id="qiskit.providers.aer.library.SaveAmplitudes.copy" signature="SaveAmplitudes.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-providers-aer-library-saveamplitudes-inverse" />

  ### inverse

  <Function id="qiskit.providers.aer.library.SaveAmplitudes.inverse" signature="SaveAmplitudes.inverse()">
    Special case. Return self.
  </Function>

  <span id="qiskit-providers-aer-library-saveamplitudes-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.providers.aer.library.SaveAmplitudes.is_parameterized" signature="SaveAmplitudes.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="qiskit-providers-aer-library-saveamplitudes-mirror" />

  ### mirror

  <Function id="qiskit.providers.aer.library.SaveAmplitudes.mirror" signature="SaveAmplitudes.mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-providers-aer-library-saveamplitudes-qasm" />

  ### qasm

  <Function id="qiskit.providers.aer.library.SaveAmplitudes.qasm" signature="SaveAmplitudes.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="qiskit-providers-aer-library-saveamplitudes-repeat" />

  ### repeat

  <Function id="qiskit.providers.aer.library.SaveAmplitudes.repeat" signature="SaveAmplitudes.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="qiskit-providers-aer-library-saveamplitudes-reverse-ops" />

  ### reverse\_ops

  <Function id="qiskit.providers.aer.library.SaveAmplitudes.reverse_ops" signature="SaveAmplitudes.reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-providers-aer-library-saveamplitudes-soft-compare" />

  ### soft\_compare

  <Function id="qiskit.providers.aer.library.SaveAmplitudes.soft_compare" signature="SaveAmplitudes.soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  <span id="qiskit-providers-aer-library-saveamplitudes-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.providers.aer.library.SaveAmplitudes.validate_parameter" signature="SaveAmplitudes.validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.providers.aer.library.SaveAmplitudes.condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[`Clbit`]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.providers.aer.library.SaveAmplitudes.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.providers.aer.library.SaveAmplitudes.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.providers.aer.library.SaveAmplitudes.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.providers.aer.library.SaveAmplitudes.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### params

  <Attribute id="qiskit.providers.aer.library.SaveAmplitudes.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.providers.aer.library.SaveAmplitudes.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

